# brain

./: .clang-format  .dockerignore  .env.example  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  Dockerfile  FINAL_REPORT.md  QWEN.md  README.md  api_gateway.hpp  audio_unit.hpp  auth_system.hpp  backlog.md  brain  brain.cpp  brain.hpp  brain_io.txt  brain_messages.proto  brain_server.hpp  brain_simulation  config.json  connect.sh  crash_reporter.cpp  crash_reporter.hpp  db_interface.hpp  devops_stubs.hpp  dnn.cpp  dnn.hpp  docker-compose.yml  english_curriculum.txt  generate_backlog.py  main.cpp  memory_store.cpp  memory_store.hpp  metacognition.hpp  package.json  plan.md  planning_unit.cpp  (+30 more)
.agent/workflows/: devqa.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  main.yml
.qwen/: PROJECT_SUMMARY.md
agent/: 00_INDEX.md  01_PROJECT_CONTEXT.md  02_CONVENTIONS.md  03_DEFAULTS.md  10_COMMANDS.md  AGENT_MANIFEST.md  ARCHITECTURE.md  COMPLETION_SUMMARY.md  COPY_INTO_NEW_REPO.md  DOCKER_GITHUB_UPGRADE_SUMMARY.md  HOW_TO_USE.md  PROJECT_BOOTSTRAP.md  PROJECT_COMPLETE.md  QUICKSTART.md  QUICKSTART_CHECKLIST.md  QUICK_REFERENCE.md  README.md  REFERENCE_MAP.md  ROUTING_RULES.md
agent/00_system/: 00_principles.md  01_scope_and_limits.md  02_response_format.md  03_decision_policy.md  04_error_handling.md  05_glossary.md  06_templates_index.md  07_self_evolution.md  08_context_management.md  09_graceful_degradation.md  10_orchestration_protocol.md  11_prompt_router.md
agent/01_entrypoints/: run_existing_project.md  run_implement_only.md  run_new_project.md  run_orchestrator.md  run_plan_only.md  run_pr_review_only.md  run_release_only.md  run_security_audit_only.md  run_srs_only.md  run_test_only.md
agent/02_detection/: detect_existing_vs_new.md  detect_project_type.md  detect_repo_health.md  detect_stack_signals.md
agent/03_profiles/: profile_analyst_srs.md  profile_architect.md  profile_implementer.md  profile_planner.md  profile_pr_reviewer.md  profile_release_manager.md  profile_rule_checker.md  profile_security_auditor.md  profile_tester.md
agent/04_workflows/: 00_overview.md  01_intake_and_context_build.md  02_repo_audit_and_baseline.md  03_srs_generation.md  04_architecture_and_design.md  05_milestones_and_backlog.md  06_feature_implementation_loop.md  07_testing_and_validation.md  08_security_review.md  09_pr_review_loop.md  10_release_process.md
agent/05_gates/: gate_index.md
agent/06_skills/: skill_index.md
agent/08_plan_output_contract/: README.md  folder_layout.md  naming_conventions.md  status_schema.md
agent/09_state/: BACKLOG_STATE.md  PROJECT_STATE.md  RECOVERY_CHECKPOINT.md  RELEASE_STATE.md  SECURITY_STATE.md  SRS_STATE.md  STACK_STATE.md  TEST_STATE.md
agent/10_security/: compliance_notes.md  data_classification.md  secrets_policy.md  security_baseline.md  threat_model_template.md  vuln_response_playbook.md
agent/11_rules/: code_style_rules.md  communication_rules.md  docker_rules.md  documentation_rules.md  github_rules.md  global_rules.md  repo_hygiene_rules.md  rule_index.md  testing_rules.md
agent/12_checks/: check_index.md
agent/13_examples/: example_devops_end_to_end.md  example_docker_setup.md  example_existing_project_walkthrough.md  example_feature_cycle.md  example_github_actions_setup.md  example_new_project_walkthrough.md  example_release.md  example_security_audit.md
agent/flows/: PRODUCTION_INCIDENT.md  autofix_loop.md  production_incident.md  triage_tree.md
agent/prompts/: 00_master_prompt.txt  INDEX.md  PROMPTS_GUIDE.md  README.md  (+1 more)
agents/: architect.py  ci_loop.py  common.py  developer.py  evolve.py  qa.py  tester.py
build_antigravity/: CMakeCache.txt
build_local/: CMakeCache.txt  Makefile  brain_replica  cmake_install.cmake
build_new/: CMakeCache.txt
cognition/: decision_unit.hpp  emotion_unit.hpp  learning_unit.hpp  planning_unit.hpp  reasoning_unit.hpp
config/: config.json
data/: english_basics.txt  knowledge.txt  stopwords.txt  words.txt
docs/: BRAIN_1.0_DOCUMENTATION.md  DEVELOPER_GUIDE.md  TESTER_GUIDE.md  USER_GUIDE.md  content.md  devops_specs.md  frontend_specs.md  infrastructure_specs.md  memory_specs.md  nextgen_architecture.md  nlu_specs.md  qa_specs.md
include/: audio_unit.hpp  brain.hpp  brain_server.hpp  clock_unit.hpp  cognitive_core.hpp  cognitive_engine.hpp  decision_tree.hpp  dnn.hpp  federation.hpp  hal.hpp  logger.hpp  memory_store.hpp  planning_unit.hpp  postgres_client.hpp  postgres_storage.hpp  profiler.hpp  rate_limiter.hpp  redis_client.hpp  reflex.hpp  research_utils.hpp  server.hpp  simd_utils.hpp  skill_manager.hpp  stable.hpp  tactile_unit.hpp  task_manager.hpp  tool_registry.hpp
proto/: brain_service.proto
scripts/: connect.sh  run_tests.sh  setup_dev.sh  start.sh  teach.py  test.sh  test_auth.py  test_in_docker.sh
src/: brain.cpp  cognitive_engine.cpp  main.cpp  memory_store.cpp  planning_unit.cpp  postgres_client.cpp  postgres_storage.cpp  server.cpp  skill_manager.cpp  task_manager.cpp
tests/: CMakeLists.txt  benchmark_simd.cpp  benchmark_suite.cpp  brain_integration_test.cpp  memory_profiling_suite.cpp  nextgen_foundation_suite.cpp  nlu_test_suite.cpp  phase1_batch_a_suite.cpp  phase1_batch_b_suite.cpp  phase1_batch_c_suite.cpp  phase1_batch_d_suite.cpp  phase1_batch_e_suite.cpp  phase1_batch_f_suite.cpp  phase2_batch_a_suite_part1.cpp  phase2_batch_a_suite_part2.cpp  qa_complete_suite.cpp  stress_test_suite.cpp  test_biological_dynamics.cpp  test_cognition_features.cpp  test_cognition_sprint.cpp  test_cognitive_engine.cpp  test_context.cpp  test_dnn.cpp  test_emotion_logic.cpp  test_emotion_unit.cpp  test_mega_batch.cpp  test_memory.cpp  test_memory_optimization.cpp  test_nlu.cpp  test_nlu_advanced.cpp  test_nlu_context.cpp  test_nlu_improved.cpp  test_planning_dynamic.cpp  test_postgres.cpp  test_rate_limiter.cpp  test_redis.cpp  test_reflex_fuzzy.cpp  test_reflex_rl.cpp  test_rl_engine.cpp  test_sensory.cpp  (+3 more)
tests/e2e/: dashboard.spec.js  package-lock.json
web/: Dockerfile  package-lock.json  package.json  server.js  tokenizer.ts
(+426 files in other folders)
